recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:7: error: not found: value minimum
    return minimum(l.head, min(l.tail));
           ^