recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  if (l.tail == Nil){
  	return l.head;
  }
  else {
    return minimum(l.head, min(l.tail));
  }
}